--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
 eclipse.preferences.version=1
 encoding//Debug/Hardware/Encoder/subdir_rules.mk=UTF-8
 encoding//Debug/Hardware/Encoder/subdir_vars.mk=UTF-8
+encoding//Debug/Hardware/I2C/subdir_rules.mk=UTF-8
+encoding//Debug/Hardware/I2C/subdir_vars.mk=UTF-8
+encoding//Debug/Hardware/MPU6050/subdir_rules.mk=UTF-8
+encoding//Debug/Hardware/MPU6050/subdir_vars.mk=UTF-8
 encoding//Debug/Hardware/OLED/subdir_rules.mk=UTF-8
 encoding//Debug/Hardware/OLED/subdir_vars.mk=UTF-8
 encoding//Debug/Hardware/PWM/subdir_rules.mk=UTF-8
