--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,6 +13,8 @@ encoding//Debug/Hardware/PWM/subdir_rules.mk=UTF-8
 encoding//Debug/Hardware/PWM/subdir_vars.mk=UTF-8
 encoding//Debug/Hardware/UART/subdir_rules.mk=UTF-8
 encoding//Debug/Hardware/UART/subdir_vars.mk=UTF-8
+encoding//Debug/Hardware/nRF24L01/subdir_rules.mk=UTF-8
+encoding//Debug/Hardware/nRF24L01/subdir_vars.mk=UTF-8
 encoding//Debug/PID/subdir_rules.mk=UTF-8
 encoding//Debug/PID/subdir_vars.mk=UTF-8
 encoding//Debug/System/subdir_rules.mk=UTF-8
